# lib

./: CMakeLists.txt  Doxyfile  collision_detector.h  constants.h  main.cpp  module_reflection.h  object.h  radar.h  scene.h  signal.h
.github/workflows/: static.yml
docs/: README.md
docs/latex/: annotated.tex  class_aircraft.eps  class_aircraft.tex  class_base.eps  class_base.tex  class_radar.eps  class_radar.tex  class_scene.tex  class_signal.tex  class_source.eps  class_source.tex  classcollision_detector.tex  classmodule_reflection.tex  collision__detector_8h_source.tex  constants_8h_source.tex  files.tex  hierarchy.tex  module__reflection_8h_source.tex  object_8h_source.tex  radar_8h_source.tex  refman.tex  scene_8h_source.tex  signal_8h_source.tex
